--- a/frontend/src/pages/Landing.css
+++ b/frontend/src/pages/Landing.css
@@ -1,7 +1,7 @@
 .landingPageContainer{
     height: 100vh;
     width: 100vw;
-    background-image: url("background.png");
+    background-image: url("/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
