new updated commit

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -15,6 +15,7 @@
 .homeNavbar div:nth-child(1) h2{
     font-size: 1.8rem;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .homeNavbar div:nth-child(2){
