--- a/frontend/src/pages/Landing.css
+++ b/frontend/src/pages/Landing.css
@@ -134,7 +134,7 @@ main div button:hover{
 
 @media (max-aspect-ratio : 6/10){
     .navbar{
-        padding-inline: 0.8rem;
+        padding: 0.8rem;
     }
     .navbar div h2{
         font-size: 1rem;
